--- a/_doc/sphinxdoc/source/bds/b2000.rst
+++ b/_doc/sphinxdoc/source/bds/b2000.rst
@@ -29,4 +29,4 @@
     s'est mis en tête de suivre un messie, un certain Jésus.
     Il se met en marche pour le rattraper, accompagné par d'autres
     pères, eux aussi abandonnés par leur enfant.
-    Mais pourquoi ont-ils fait ça ? L'aventure prête à al discussion.
+    Mais pourquoi ont-ils fait ça ? L'aventure prête à la discussion.
