--- a/_doc/sphinxdoc/source/livres/l1970.rst
+++ b/_doc/sphinxdoc/source/livres/l1970.rst
@@ -12,3 +12,14 @@
 
     La traversée d'un enfant au corps d'homme dans un décor de guerre.
     La langue est superbe.
+
+.. quote::
+    :author: John Irving
+    :book: Le monde selon Garp
+    :index: vie
+    :year: 1978
+    :title1: true
+    :source: https://fr.wikipedia.org/wiki/Le_Monde_selon_Garp
+
+    Une tranche de vie. J'ai rarement vu un auteur autant aimer
+    ses personnages, tous, sans exception.
